crates/knok-build/tests/ui/old_axis_syntax.rs
#![allow(unused_imports)]

use knok_build::prelude::*;

#[knok_build::graph(backend = Backend::LlvmCpu)]
fn forward(x: Tensor2<f32, 2, 3>) -> Tensor1<f32, 2> {
    sum::<1>(x)
}

fn main() {}
